<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil"
            android:icon="@mipmap/nav_perfil"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@mipmap/nav_chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@mipmap/nav_cerrar_sesion"
            android:title="@string/cerrar_sesion" />
    </group>

    <item android:title="@string/informacion">
        <menu>
            <item
                android:id="@+id/nav_compartir"
                android:icon="?android:attr/actionModeShareDrawable"
                android:title="@string/compartir_app" />
            <item
                android:id="@+id/nav_informacion"
                android:icon="@mipmap/ic_open"
                android:title="@string/sobre_open" />
        </menu>
    </item>

</menu>
