<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interface_principal.navigation_drawe.negocio.SistemaPedidos.MainActivity_negocios_formulario_direccion">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_calle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/input_calle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calle" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/input_numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_piso_departamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/input_piso_departamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/piso_departamento" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_entre_calle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/input_entre_calle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entre_calles" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_ciudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/input_ciudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ciudad" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_localidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/input_localidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/localidad" />

        </android.support.design.widget.TextInputLayout>




    </LinearLayout>

    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/md_orange_300"
        android:onClick="Button_Continuar"
        android:text="@string/continuar"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>