<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interface_principal.navigation_drawe.negocio.cuenta.SistemaPedidos.MainActivity_negocios_formulario_pedidos">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_contacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <EditText
                    android:id="@+id/input_contacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contacto" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <EditText
                    android:id="@+id/input_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/DB_telefono" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView36"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_entrega" />

                <Spinner
                    android:id="@+id/spinneer_tipo_entrega"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:entries="@array/tipo_pedidos"
                    android:spinnerMode="dialog">

                </Spinner>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cardview_shadow_start_color" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_contenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@color/cardview_light_background"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:onClick="Button_SeleccioneDireccion"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView38"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/direccion" />

                    <TextView
                        android:id="@+id/textView37"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Ingrese_direccion_entrega" />

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/cardview_shadow_start_color" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_horario"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/horario_entrega" />

                    <Spinner
                        android:id="@+id/spinner_horarios"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:entries="@array/horarios">

                    </Spinner>

                    <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/cardview_shadow_start_color" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_forma_pago"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView34"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/forma_pago" />

                    <Spinner
                        android:id="@+id/spinner_forma_pago"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:entries="@array/formato_pago">

                    </Spinner>

                    <View
                        android:id="@+id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/cardview_shadow_start_color" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_nota"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_nota"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp">

                        <EditText
                            android:id="@+id/editext_nota"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/agregar_notas" />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/costo_adicional"
                        android:textAlignment="center"
                        android:textColor="@color/md_red_200"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_orange_300"
        android:onClick="Button_EnviarPedido"
        android:text="@string/enviar_peido"
        android:textColor="@color/cardview_light_background"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>