<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:elevation="3dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:elevation="3dp"
                android:gravity="center"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="5dp"
                    android:src="@color/cardview_shadow_start_color"
                    app:civ_border_color="#ffffff"
                    app:civ_border_width="2dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView39"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="@string/tipo_entrega"
                            android:textAllCaps="true"
                            android:textColor="@color/texto_principal" />

                        <TextView
                            android:id="@+id/textView_HoraRetiro"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="00:00"
                            android:textAlignment="textEnd"
                            android:textColor="@color/texto_terciario"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textView45"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="Hs"
                            android:textColor="@color/texto_terciario"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView42"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cantidad"
                        android:textColor="@color/texto_terciario" />

                    <TextView
                        android:id="@+id/textView41"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/horario_entrega"
                        android:textAlignment="textEnd"
                        android:textColor="@color/texto_terciario"
                        android:textSize="10sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/md_deep_orange_400"
                android:elevation="0dp"
                android:text="@string/pendiente"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/cardview_shadow_start_color"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>